test/users/engin/retInnerFunction.good
retInnerFunction.chpl:1: In function 'foo':
retInnerFunction.chpl:3: error: cannot capture lambda because it refers to outer variables
retInnerFunction.chpl:3: note: such as 'dummy', here
